# anarlog

./: .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  README.md  doxxer.cli.toml  doxxer.desktop.toml  eslint.config.js  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
crates/api-subscription/: Cargo.toml
crates/api-subscription/src/: cleanup_worker.rs  cloudsync_cleanup.rs  config.rs  lib.rs  stripe.rs  supabase.rs  trial.rs
crates/api-subscription/src/routes/: account.rs  billing.rs
crates/api-sync/: Cargo.toml
crates/api-sync/src/: config.rs  error.rs  lib.rs  shared_notes.rs  snapshot.rs  state.rs
crates/api-sync/src/routes/: attachment_backups.rs  e2ee_witness.rs  mod.rs  shared_attachments.rs
crates/cloudsync/: Cargo.toml
crates/cloudsync/src/: api.rs  close.rs  error.rs  lib.rs  network.rs
crates/db-app/: Cargo.toml
crates/db-app/migrations/: 20260524000000_default_templates.sql  20260713164500_repair_empty_session_titles.sql  20260714120000_search_index_queue.sql  20260714120100_search_index_sessions_triggers.sql  20260714120200_search_index_session_documents_triggers.sql  20260714120300_search_index_transcripts_triggers.sql  20260714120400_search_index_humans_triggers.sql  20260714120500_search_index_organizations_triggers.sql  20260716120000_personal_workspaces.sql  20260716130000_cloudsync_session_evictions.sql  20260716173000_shared_session_cache.sql  20260717120000_e2ee_replica.sql  20260717140000_attachment_local_state.sql  20260717150000_attachment_transfer_jobs.sql  20260717170000_attachment_cloud_sync_intent.sql  20260717171000_shared_session_attachment_cache.sql  20260717172000_shared_session_cache_attachments.sql  20260717190000_shared_session_cache_web_edits.sql  20260717191000_session_share_sync_state.sql  20260717192000_e2ee_replica_order.sql  20260717193000_e2ee_freshness_witness.sql
crates/db-app/src/: cloudsync.rs  e2ee.rs  legacy_import.rs  lib.rs
crates/db-app/tests/: cloudsync.rs
crates/db-core/: Cargo.toml
crates/db-core/src/: lib.rs
crates/db-core/src/cloudsync/: hook.rs  mod.rs  ops.rs  runtime.rs  types.rs
crates/e2ee/: Cargo.toml
crates/e2ee/src/: blob.rs  lib.rs
crates/fs-sync-core/: Cargo.toml
crates/fs-sync-core/src/: lib.rs  session.rs
crates/fs-sync-core/src/audio/: mod.rs
crates/local-llm-core/: Cargo.toml
crates/local-llm-core/src/: error.rs  lib.rs  server.rs
crates/local-model/: Cargo.toml
crates/local-model/src/: lib.rs
crates/local-stt-server/: Cargo.toml
crates/local-stt-server/src/: lib.rs
crates/model-manager/: Cargo.toml
crates/model-manager/src/: loader.rs
crates/owhisper-client/: Cargo.toml
crates/owhisper-client/src/: lib.rs  local_soniqo_live.rs  providers.rs
crates/owhisper-client/src/adapter/: http.rs  mod.rs
crates/owhisper-client/src/adapter/cartesia/: batch.rs  live.rs  mod.rs
crates/owhisper-client/src/adapter/deepgram/: batch.rs
crates/owhisper-client/src/adapter/openai/: batch.rs
crates/supabase-storage/: Cargo.toml
crates/supabase-storage/src/: lib.rs
crates/supabase-storage/tests/: client.rs
crates/template-app/: Cargo.toml
crates/template-app/assets/: _macros.jinja  enhance.system.md.jinja  enhance.user.md.jinja  event-contact.system.md.jinja
crates/template-app/src/: chat.rs  enhance.rs  event_contact.rs  lib.rs
crates/template-app/tests/llm_eval/cases/: enhance.rs
crates/transcribe-proxy/: Cargo.toml
crates/transcribe-proxy/src/: env.rs
crates/transcribe-proxy/src/routes/: mod.rs
crates/transcribe-proxy/tests/common/: mod.rs
crates/vad/: Cargo.toml
crates/vad/benches/: vad.rs
crates/vad/src/: lib.rs
crates/vad/tests/: compare.rs
docs/: ai-setup.mdx  (+15 more)
plugins/attachment-sync/: Cargo.toml  build.rs  package.json
plugins/attachment-sync/js/: bindings.gen.ts
plugins/attachment-sync/permissions/: default.toml
plugins/attachment-sync/permissions/autogenerated/: reference.md
plugins/attachment-sync/permissions/schemas/: schema.json
plugins/attachment-sync/src/: commands.rs  control.rs  error.rs  lib.rs  models.rs  runtime.rs
plugins/db/: Cargo.toml  build.rs
plugins/db/js/: bindings.gen.ts  index.ts
plugins/db/permissions/: default.toml
plugins/db/permissions/autogenerated/: reference.md
plugins/db/permissions/schemas/: schema.json
plugins/db/src/: commands.rs  e2ee_witness.rs  error.rs  lib.rs  runtime.rs
plugins/db/src/import/: legacy_vault.rs  mod.rs
plugins/deeplink2/: Cargo.toml  build.rs
plugins/deeplink2/js/: bindings.gen.ts
plugins/deeplink2/permissions/: default.toml
plugins/deeplink2/permissions/autogenerated/: reference.md
plugins/deeplink2/permissions/schemas/: schema.json
plugins/deeplink2/src/: commands.rs  error.rs  lib.rs  pending_deep_link.rs  pending_share_open.rs
plugins/deeplink2/src/types/: integration_callback.rs  mod.rs  share_open.rs
plugins/local-llm/: Cargo.toml
plugins/local-llm/src/: ext.rs  lib.rs  migrate.rs
plugins/local-stt/: Cargo.toml  build.rs
plugins/local-stt/js/: bindings.gen.ts
plugins/local-stt/permissions/: default.toml
plugins/local-stt/permissions/autogenerated/: reference.md
plugins/local-stt/permissions/schemas/: schema.json
plugins/local-stt/src/: commands.rs  ext.rs  lib.rs  model.rs
plugins/local-stt/src/server/: mod.rs  supervisor.rs
plugins/settings/: Cargo.toml
plugins/settings/src/: ext.rs  state.rs
plugins/store2/: Cargo.toml  build.rs  package.json
plugins/store2/js/: bindings.gen.ts
plugins/store2/permissions/: default.toml
plugins/store2/permissions/autogenerated/: reference.md
plugins/store2/permissions/schemas/: schema.json
plugins/store2/src/: commands.rs  lib.rs
plugins/tray/: Cargo.toml  build.rs
plugins/tray/js/: bindings.gen.ts
plugins/tray/permissions/: default.toml
plugins/tray/permissions/autogenerated/: reference.md
plugins/tray/permissions/schemas/: schema.json
plugins/tray/src/: commands.rs  ext.rs  lib.rs  schedule.rs
plugins/tray/src/menu_items/: help_report_bug.rs  help_suggest_feature.rs  mod.rs  tray_agenda.rs  tray_check_update.rs  tray_show_events.rs  tray_version.rs
(+1259 files in other folders)
