[package]
name = "cloudsync"
version = "0.1.0"
edition = "2024"

[dependencies]
dirs = { workspace = true }
libsqlite3-sys = "0.35"
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
sqlx = { workspace = true, features = ["runtime-tokio", "sqlite", "sqlite-unbundled"] }
thiserror = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt"] }
