[package]
name = "e2ee"
version = "0.1.0"
edition = "2024"

[dependencies]
base64 = { workspace = true }
chacha20poly1305 = "0.10"
getrandom = "0.3"
hkdf = "0.12"
hmac = "0.12"
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
sha2 = "0.10"
thiserror = { workspace = true }
zeroize = { version = "1.8", features = ["derive"] }
