[package]
name = "model-manager"
version = "0.1.0"
edition = "2024"

[features]
whisper-local = ["hypr-whisper-local"]

[dependencies]
hypr-whisper-local = { workspace = true, optional = true }

thiserror = { workspace = true }
tokio = { workspace = true, features = ["sync", "time", "rt", "macros"] }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros", "rt"] }
uuid = { workspace = true, features = ["v4"] }
