[package]
name = "template-app"
version = "0.1.0"
edition = "2024"

[dependencies]
askama = { workspace = true }
hypr-askama-utils = { workspace = true }
minijinja = { workspace = true }
serde = { workspace = true, features = ["derive"] }
specta = { workspace = true, features = ["derive"] }
thiserror = { workspace = true }

[dev-dependencies]
hypr-template-eval = { workspace = true }
insta = { workspace = true }

[[test]]
name = "llm_eval"
path = "tests/llm_eval/main.rs"
harness = false
